style(community settings): fix 'save changes' bar so that when the left nav dropdown menu is open as the sidebar, it is still visible

--- a/react-app/src/features/CommunitySettings/CommunitySettings.css
+++ b/react-app/src/features/CommunitySettings/CommunitySettings.css
@@ -45,6 +45,9 @@
   justify-content: flex-end;
   background: #edeff1;
   padding: 0 24px;
+  left: 0;
+  right: 0;
+  top: 89px;
 }
 
 .edit-community-page-settings {
