--- a/react-app/src/features/Posts/SinglePost/SinglePost.css
+++ b/react-app/src/features/Posts/SinglePost/SinglePost.css
@@ -620,6 +620,57 @@ li {
 
 .single-post-page-banner {
   height: var(--community-banner-height);
+  width: 100%;
+  background-image: var(--community-banner-img);
+  background-color: var(--community-banner-color);
+  padding: 8px 16px;
+  position: relative;
+  cursor: pointer;
+}
+
+.single-post-page-community-icon img {
+  border-radius: 100%;
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background: var(--community-base-color);
+  border: 2px solid white;
+  float: left;
+  margin-right: 8px;
+}
+
+.single-post-page-community-icon-img {
+  height: 36px;
+  width: 36px;
+}
+
+.single-post-page-community-icon-larger {
+  width: 56px;
+  height: 56px;
+}
+
+.single-post-page-banner-content {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 512px;
+}
+
+.single-post-page-banner-content-container {
+  max-width: 1200px;
+  height: 100%;
+  margin: auto;
+  position: relative;
+}
+
+.single-post-page-community-name {
+  padding-top: 4px;
+  padding-right: 16px;
+  font-size: 22px;
+  font-weight: 500;
+  color: #fcfcfb;
+  float: left;
+  line-height: 26px;
 }
 
 @media (max-width: 1120px) {
