--- a/react-app/src/layouts/NavSidebar/NavSidebar.css
+++ b/react-app/src/layouts/NavSidebar/NavSidebar.css
@@ -7,6 +7,7 @@
   top: 0;
   display: block;
   width: 270px;
+  z-index: 100;
 }
 
 .main-padded {
